
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_2__ TYPE_1__ ;


typedef int vm_page_info_t ;
typedef TYPE_1__* vm_page_info_basic_t ;
typedef int vm_page_info_basic_data_t ;
typedef scalar_t__ vm_map_t ;
typedef int vm_map_size_t ;
typedef int mach_vm_size_t ;
typedef scalar_t__ mach_vm_offset_t ;
typedef int mach_vm_address_t ;
typedef int mach_msg_type_number_t ;
typedef scalar_t__ kern_return_t ;
struct TYPE_2__ {int disposition; } ;


 scalar_t__ KERN_INVALID_ARGUMENT ;
 scalar_t__ KERN_RESOURCE_SHORTAGE ;
 scalar_t__ KERN_SUCCESS ;
 int MAX_PAGE_RANGE_QUERY ;
 int MIN (int,int) ;
 int PAGE_SHIFT ;
 scalar_t__ VM_MAP_NULL ;
 int VM_PAGE_INFO_BASIC ;
 int VM_PAGE_INFO_BASIC_COUNT ;
 int assert (int) ;
 scalar_t__ copyout (void*,int,int) ;
 void* kalloc (int) ;
 int kfree (void*,int) ;
 int mach_vm_round_page (int) ;
 scalar_t__ mach_vm_trunc_page (scalar_t__) ;
 scalar_t__ vm_map_page_range_info_internal (scalar_t__,scalar_t__,int,int ,int ,int *) ;

kern_return_t
mach_vm_page_range_query(
 vm_map_t map,
 mach_vm_offset_t address,
 mach_vm_size_t size,
 mach_vm_address_t dispositions_addr,
 mach_vm_size_t *dispositions_count)
{
 kern_return_t kr = KERN_SUCCESS;
 int num_pages = 0, i = 0;
 mach_vm_size_t curr_sz = 0, copy_sz = 0;
 mach_vm_size_t disp_buf_req_size = 0, disp_buf_total_size = 0;
 mach_msg_type_number_t count = 0;

 void *info = ((void*)0);
 void *local_disp = ((void*)0);;
 vm_map_size_t info_size = 0, local_disp_size = 0;
 mach_vm_offset_t start = 0, end = 0;

 if (map == VM_MAP_NULL || dispositions_count == ((void*)0)) {
  return KERN_INVALID_ARGUMENT;
 }

 disp_buf_req_size = ( *dispositions_count * sizeof(int));
 start = mach_vm_trunc_page(address);
 end = mach_vm_round_page(address + size);

 if (end < start) {
  return KERN_INVALID_ARGUMENT;
 }

 if (disp_buf_req_size == 0 || (end == start)) {
  return KERN_SUCCESS;
 }






 curr_sz = MIN(end - start, MAX_PAGE_RANGE_QUERY);
 num_pages = (int) (curr_sz >> PAGE_SHIFT);

 info_size = num_pages * sizeof(vm_page_info_basic_data_t);
 info = kalloc(info_size);

 if (info == ((void*)0)) {
  return KERN_RESOURCE_SHORTAGE;
 }

 local_disp_size = num_pages * sizeof(int);
 local_disp = kalloc(local_disp_size);

 if (local_disp == ((void*)0)) {

  kfree(info, info_size);
  info = ((void*)0);
  return KERN_RESOURCE_SHORTAGE;
 }

 while (size) {

  count = VM_PAGE_INFO_BASIC_COUNT;
  kr = vm_map_page_range_info_internal(
    map,
    start,
    mach_vm_round_page(start + curr_sz),
    VM_PAGE_INFO_BASIC,
    (vm_page_info_t) info,
    &count);

  assert(kr == KERN_SUCCESS);

  for (i = 0; i < num_pages; i++) {

   ((int*)local_disp)[i] = ((vm_page_info_basic_t)info)[i].disposition;
  }

  copy_sz = MIN(disp_buf_req_size, num_pages * sizeof(int) );
  kr = copyout(local_disp, (mach_vm_address_t)dispositions_addr, copy_sz);

  start += curr_sz;
  disp_buf_req_size -= copy_sz;
  disp_buf_total_size += copy_sz;

  if (kr != 0) {
   break;
  }

  if ((disp_buf_req_size == 0) || (curr_sz >= size)) {
   size = 0;

  } else {

   dispositions_addr += copy_sz;

   size -= curr_sz;

   curr_sz = MIN(mach_vm_round_page(size), MAX_PAGE_RANGE_QUERY);
   num_pages = (int)(curr_sz >> PAGE_SHIFT);
  }
 }

 *dispositions_count = disp_buf_total_size / sizeof(int);

 kfree(local_disp, local_disp_size);
 local_disp = ((void*)0);

 kfree(info, info_size);
 info = ((void*)0);

 return kr;
}
